Mobile menu z-index fix

--- a/static/styles.css
+++ b/static/styles.css
@@ -276,9 +276,10 @@ footer {
     .navbar.active {
         display: block;
         position: fixed;
+        z-index: 1000;
         top: 70px;
         left: 0;
-        width: 100vw;
+        width: 100%;
         height: fit-content;
     }
 
